--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@-/expo",
   "version": "0.0.0",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "dev": "expo start",
     "tsc": "tsc",
