--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -5,16 +5,22 @@
   "scripts": {
     "dev": "expo start",
     "tsc": "tsc",
-    "tsc:dev": "tsc --noEmit --watch --preserveWatchOutput"
+    "tsc:dev": "tsc --noEmit --watch --preserveWatchOutput",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
-    "expo": "^46.0.10",
+    "expo": "~46.0.9",
     "expo-constants": "^13.2.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
     "react-native-webview": "11.23.0",
-    "typescript": "4.8.3"
+    "typescript": "4.8.3",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
