--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -20,7 +20,8 @@
     "typescript": "4.8.3",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-dev-client": "~1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
