--- a/packages/expo/android/app/src/main/AndroidManifest.xml
+++ b/packages/expo/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="dev.hiro18181.expo_vite_webview"/>
+        <data android:scheme="exp+expo-vite-webview"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
