--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -15,15 +15,15 @@
   "dependencies": {
     "expo": "~46.0.9",
     "expo-constants": "^13.2.4",
+    "expo-dev-client": "~1.2.1",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-webview": "11.23.0",
-    "typescript": "4.8.3",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
     "react-native-web": "~0.18.7",
-    "expo-dev-client": "~1.2.1"
+    "react-native-webview": "11.23.0",
+    "typescript": "4.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
