--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,4 @@ jobs:
       - run: npm run setup:ci
       - run: npm run lint
       - run: npm run tsc
+      - run: docker-compose run --rm dev npm -C packages/expo run android:assemble:release
