--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,6 @@ jobs:
       - run: npm run tsc
       - run: npm -C packages/client run build
 
-  # TODO: cache build
   build-android:
     runs-on: ubuntu-20.04
     steps:
@@ -28,4 +27,9 @@ jobs:
         with:
           node-version: "16.17.0"
       - run: npm run setup:ci
+      - name: cache .gradle
+        uses: actions/cache@v3
+        with:
+          key: gradle
+          path: ${{ env.HOME }}/.gradle
       - run: docker-compose run --rm dev npm -C packages/expo run android:assemble:release
