--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,5 @@ jobs:
         uses: actions/cache@v3
         with:
           key: gradle
-          path: ${{ env.HOME }}/.gradle
+          path: .gradle
       - run: docker-compose run --rm dev npm -C packages/expo run android:assemble:release
