feat: add expo-updates server

--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -4,6 +4,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "dev": "expo start --dev-client",
+    "export": "expo export --platform android",
     "tsc": "tsc",
     "tsc:dev": "tsc --noEmit --watch --preserveWatchOutput",
     "android:gradle": "cd ./android && ./gradlew",
