--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:client": "npm -C packages/client run dev",
     "tsc": "run-p tsc:*",
     "tsc:expo": "npm -C packages/expo run tsc",
-    "tsc:client": "tsc -b packages/client",
+    "tsc:workspaces": "tsc -b packages/client packages/expo-updates-server",
     "lint": "run-s prettier eslint",
     "lint:check": "run-s prettier:check eslint:check",
     "eslint": "npm run eslint:check -- --fix",
