--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,11 +27,11 @@ jobs:
         with:
           node-version: "16.17.0"
       - run: npm run setup:ci
-      # TODO: when to invalidate cache? (probably packages/expo/android/settings.gradle, packages/expo/android/build.gradle, packages/expo/android/app/build.gradle)
       - name: cache .gradle
         uses: actions/cache@v3
         with:
-          key: gradle
+          # probably package-lock.json is a fine indicator of the changes under packages/expo/android
+          key: gradle-${{ hashFiles('packages/expo/package-lock.json') }}
           path: .gradle
       - run: docker-compose run --rm dev npm -C packages/expo run android:assemble:release
       - name: fix .gradle file owner
