--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,25 @@ jobs:
       - run: npm run setup:ci
       - run: npm run lint
       - run: npm run tsc
+      - run: npm -C packages/client run build
+
+  build-android:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: "7.11.0"
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "16.17.0"
+      - run: npm run setup:ci
+      - name: cache .gradle
+        uses: actions/cache@v3
+        with:
+          # probably package-lock.json is a fine indicator of the changes under packages/expo/android
+          key: gradle-${{ hashFiles('packages/expo/package-lock.json') }}
+          path: .gradle
+      - run: docker-compose run --rm dev npm -C packages/expo run android:assemble:release
+      - name: fix .gradle file owner
+        run: sudo chown -R $(id -u):$(id -g) .gradle
