--- a/packages/expo/package.json
+++ b/packages/expo/package.json
@@ -3,16 +3,25 @@
   "version": "0.0.0",
   "main": "./src/index.ts",
   "scripts": {
-    "dev": "expo start",
+    "dev": "expo start --dev-client",
     "tsc": "tsc",
-    "tsc:dev": "tsc --noEmit --watch --preserveWatchOutput"
+    "tsc:dev": "tsc --noEmit --watch --preserveWatchOutput",
+    "android:gradle": "cd ./android && ./gradlew",
+    "android:assemble": "npm run android:gradle -- assembleDebug --build-cache --configure-on-demand",
+    "android:install": "npm run android:gradle -- installDebug --build-cache",
+    "android:assemble:release": "npm run android:gradle -- assembleRelease --build-cache --configure-on-demand",
+    "android:install:release": "npm run android:gradle -- installRelease --build-cache"
   },
   "dependencies": {
-    "expo": "^46.0.10",
+    "expo": "~46.0.9",
     "expo-constants": "^13.2.4",
+    "expo-dev-client": "~1.2.1",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-web": "~0.18.7",
     "react-native-webview": "11.23.0",
     "typescript": "4.8.3"
   },
