--- a/packages/expo-updates-server/package.json
+++ b/packages/expo-updates-server/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "dev": "npm run rakkas:dev",
     "generate-manifest": "node -r esbuild-register src/cli/generate-manifest.ts ../expo/dist 0.0.0",
+    "build": "npm run rakkas:build:vercel",
     "rakkas:dev": "rakkas --no-clearScreen --port 3000",
     "rakkas:build": "rakkas build",
-    "rakkas:build:vercel": "bash misc/build-vercel.sh"
+    "rakkas:build:vercel": "CONFIG_RAKKAS_ADAPTER=vercel npm run rakkas:build"
   },
   "dependencies": {
     "@hattip/response": "^0.0.17",
