--- a/packages/expo-updates-server/package.json
+++ b/packages/expo-updates-server/package.json
@@ -5,6 +5,7 @@
     "dev": "npm run rakkas:dev",
     "generate-manifest": "node -r esbuild-register src/cli/generate-manifest.ts ../expo/dist 0.0.0",
     "build": "npm run rakkas:build:vercel",
+    "deploy": "npm run rakkas:build:vercel && vercel deploy --prebuilt . --prod",
     "rakkas:dev": "rakkas --no-clearScreen --port 3000",
     "rakkas:build": "rakkas build",
     "rakkas:build:vercel": "CONFIG_RAKKAS_ADAPTER=vercel npm run rakkas:build"
